<resources>
    <string name="app_name">Fitnote</string>
    <string name="google_maps_key">AIzaSyCjxsPkipSTvqfYBJfDoiIXHwwBU1YTv1w</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_go">Let\'s Go..</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="continuee">Continue</string>
    <string name="skip">Skip</string>
    <string name="home">Home</string>
    <string name="workout">Workout</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="distance_km">Distance (km)</string>
    <string name="calories">Calories</string>
    <string name="avg_speed_km_h">Avg Speed (km/h)</string>
    <string name="_0_00">0.00</string>
    <string name="start_run">Start Run</string>
    <string name="pause">Pause</string>
    <string name="finish">Finish</string>
    <string name="resume">Resume</string>
    <string name="cancel_run">cancel_run</string>
    <string name="cancel_run_dialog">Cancel Run!</string>
    <string name="canel_run_dialog_message">Are you sure to cancel current run?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="keep_going">keep going</string>
    <string name="taking_abreak">taking a break</string>
    <string name="saved_successffuly">Saved Successfully</string>
    <string name="sorted_by">Sorted by</string>
    <string name="date">Date</string>
    <string name="speed">Speed</string>
    <string name="cal">Calories</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>

    <string-array name="sorted_type" >
        <item>Date</item>
        <item>Time</item>
        <item>Distance</item>
        <item>Speed</item>
        <item>Calories</item>
    </string-array>

</resources>